--- a/views/layout.jade
+++ b/views/layout.jade
@@ -114,6 +114,7 @@ html
     // JQuery y Bootstrap
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
+    block script
     // Modernizr
     script(type='text/javascript', src='/javascripts/plugins/modernizr.js')
     // Jquery appear
