--- a/views/denuncia.jade
+++ b/views/denuncia.jade
@@ -5,6 +5,9 @@ block meta
 	meta(property='og:title' content='Your Website Title')
 	meta(property='og:description' content='Your description')
 block script
+	script(src="/javascripts/panel-lateral.js")
+	// TinyMCE Editor
+	script(src="//cdn.tinymce.com/4/tinymce.min.js")
 	script.
 		var denuncia = {
 			titulo: '#{denuncia.titulo}',
@@ -14,18 +17,86 @@ block script
 		var geojsonDenuncia = !{denuncia.geometria}; // geometría del servidor
 		// solo podemos acceder a ella desde este tipo de scripts que tienen un punto al final
 	script(src="/javascripts/openlayers/olvisor.js")
+block link
+	link(rel="stylesheet" href="/stylesheets/carousel.css")
 block botonesmapa
-	button.btn.btn-small.btn-info.btn-map.cd-btn(type='button', style='position: absolute; right: 0.5em; bottom: 40%; min-width: 1.375em')
+	button.btn.btn-small.btn-info.btn-map.cd-btn(panel-open="contenido" type='button', style='position: absolute; right: 0.5em; bottom: 40%; min-width: 1.375em')
 		i.fa.fa-file-text-o
+	button.btn.btn-small.btn-warning.btn-map.cd-btn(panel-open="comentarios" type='button', style='position: absolute; right: 0.5em; bottom: 50%; min-width: 1.375em')
+		i.fa.fa-comments
+	button.btn.btn-small.btn-warning.btn-map.cd-btn(panel-open="imagenes" type='button', style='position: absolute; right: 0.5em; bottom: 60%; min-width: 1.375em')
+		i.fa.fa-image
 block panel-lateral
-	.cd-panel.from-right
+	#contenido.cd-panel.from-right
 		header.cd-panel-header
-			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") #{denuncia.titulo}
+			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Contenido
 			a.cd-panel-close(href='#0') Close
 		.cd-panel-container
-			.cd-panel-content 
-				if(denuncia.imagenes)
-					h1 Hay imágenes
+			.cd-panel-content
+				h2 #{denuncia.titulo}
+				div(style="word-wrap: break-word;") !{denuncia.descripcion}
+	#comentarios.cd-panel.from-right
+		header.cd-panel-header
+			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Comentarios
+			a.cd-panel-close(href='#0') Close
+		.cd-panel-container
+			.cd-panel-content
+				if user
+					p Añade un comentario
+					form(id="form_add_comentario" action="/app/denuncia/#{denuncia.gid}/addComentario", method="post")
+						textarea#comentar(name="contenido" rows='3' style={'height':'200px'}).form-control
+						.col-lg-12.input-group.space(style={'margin-top':'5px', 'margin-bottom':'15px'})
+							span.input-group-addon
+								i.fa.fa-comment.fa-fw
+							input.form-control.btn-success(type="submit", value="Comentar")
+				if(denuncia.comentarios)
+					p Contiene #{denuncia.comentarios.length} comentarios
+					each comentario in denuncia.comentarios
+						.col-lg-12.space
+							.row(style={background: 'rgba(0,50,187, 0.1)', padding:'10 5 10 5px'}).form-horizontal.text-center
+								.col-lg-4
+									a(href="/app/usuarios/#{comentario.id_usuario}")
+										img.img-responsive.img-thumbnail.img-circle(src="#{comentario.profile.picture}" style="max-width: 80px;")
+									p.space
+										a(href="/app/usuarios/#{comentario.id_usuario}") #{comentario.profile.username}
+								.col-lg-8
+									div.btn-warning
+										p #{comentario.fecha}
+									.space
+									| !{comentario.contenido}
 				else
-					h1 No hay imágenes
-				div !{denuncia.descripcion}
+					p Esta denuncia no contiene comentarios
+	#imagenes.cd-panel.from-right
+		header.cd-panel-header
+			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Imágenes
+			a.cd-panel-close(href='#0') Close
+		.cd-panel-container
+			.cd-panel-content
+				if(denuncia.imagenes)
+					p Contiene #{denuncia.imagenes.length} imágenes
+					.well(style="height: 100%;")
+						#thumbnail-preview-indicators.carousel.slide(data-ride='carousel' style="height: 100%;")
+							ol.carousel-indicators
+								- var aux = 0;
+								each imagen in denuncia.imagenes
+									if aux == 0
+										li.active(data-target='#thumbnail-preview-indicators', data-slide-to='#{aux}')
+											.thumbnail
+												img.img-responsive(src='#{imagen.path}')										
+									else
+										li(data-target='#thumbnail-preview-indicators', data-slide-to='#{aux}')
+											.thumbnail
+												img.img-responsive(src='#{imagen.path}' style="height: 10%;")
+									- aux++;
+							.carousel-inner(style="height: 100%;")
+								- var aux = 0
+								each imagen in denuncia.imagenes
+									if aux == 0
+										.item.slides.active(style="height: 100%;")
+											.slide(class="slide-#{aux + 1}" style="height: 100%;background: url('#{imagen.path}'); background-size: 100% 100%;")
+									else
+										.item.slides(style="height: 100%;")
+											div(class="slide-#{aux + 1}" style="height: 100%;background: url('#{imagen.path}'); background-size: 100% 100%;")
+									- aux++;
+				else
+					p Esta denuncia no contiene imágenes			
