--- a/views/map-layout.jade
+++ b/views/map-layout.jade
@@ -28,7 +28,7 @@ html
     link(rel='stylesheet', href='http://openlayers.org/en/v3.11.0/examples/popup.css')
     // Prefix free
     script(src='https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js')
-    // Block script
+    link(rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css")    
     block link
   body.no-trans
     // header start
@@ -90,11 +90,11 @@ html
     // section start
     // ================
     
-    block panel-lateral
-    
     #map.clearfix.object-non-visible(data-animation-effect='fadeInRightBig')
+      // Botón mostrar mi posición
+      button#show_position.btn.btn-small.btn-info.btn-map(type='button', style='position: absolute; right: 48%; bottom: 10%; min-width: 1.375em')
+        i.fa.fa-eye-slash
       // Botón abrir cerrar menú página
-      // Botón Moverse por mapa
       button#show_menu.btn.btn-small.btn-info.btn-map(type='button', style='position: absolute; right: 0.5em; bottom: 30%; min-width: 1.375em')
         i.fa.fa-navicon
       // Botón Moverse por mapa
@@ -110,11 +110,14 @@ html
       // Más controles en el mapa
       block botonesmapa
     // section end
+    block panel-lateral
     
     // Plugins Javascript situados al final de la página, así el contenido carga antes
     // JQuery y Bootstrap
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    // Panel Lateral
+    //script(src='/javascripts/panel-lateral.js')
     // Modernizr
     script(type='text/javascript', src='/javascripts/plugins/modernizr.js')
     // Jquery appear
@@ -149,164 +152,263 @@ html
     // FUNCIONALIDADES SOCKET.IO
     script(src="/javascripts/client-sockets.js")
         
-    // Panel Lateral
-    script(src='/javascripts/panel-lateral.js')
     script(type='text/javascript').
       $("h1, h2").each(function(){
-      var fontSize = $(this).css('font-size');
-      console.log(fontSize);
-      $(this).fitText(1.1, {maxFontSize: fontSize});
+        var fontSize = $(this).css('font-size');
+        console.log(fontSize);
+        $(this).fitText(1.1, {maxFontSize: fontSize});
       });
+      
       $(function(){
-      $('.dropdown-toggle').dropdown();
+        $('.dropdown-toggle').dropdown();
       });
+      
       var helpTooltipElement, helpMsg;
-      function createHelpTooltip() {
-      if (helpTooltipElement) {
-      helpTooltipElement.parentNode.removeChild(helpTooltipElement);
+        function createHelpTooltip() {
+        if (helpTooltipElement) {
+           helpTooltipElement.parentNode.removeChild(helpTooltipElement);
+        }
+        helpTooltipElement = document.createElement('div');
+        helpTooltipElement.className = 'tooltip hidden';
+        helpTooltip = new ol.Overlay({
+          element: helpTooltipElement,
+          offset: [15, 0],
+          positioning: 'center-left'
+        });
+        map.addOverlay(helpTooltip);
       }
-      helpTooltipElement = document.createElement('div');
-      helpTooltipElement.className = 'tooltip hidden';
-      helpTooltip = new ol.Overlay({
-      element: helpTooltipElement,
-      offset: [15, 0],
-      positioning: 'center-left'
-      });
-      map.addOverlay(helpTooltip);
-      }
+      
       var pointerMoveHandler = function(evt) {
-      if (evt.dragging || !info) {
-      return;
-      }
-      /** @type {string} */
-      var helpMsg = '<i class="fa fa-info-circle"></i> Click para obtener información';
-      helpTooltipElement.innerHTML = helpMsg;
-      helpTooltip.setPosition(evt.coordinate);
-      $(helpTooltipElement).removeClass('hidden');
+        if (evt.dragging || !info) {
+          return;
+        }
+        /** @type {string} */
+        var helpMsg = '<i class="fa fa-info-circle"></i> Click para obtener información';
+        helpTooltipElement.innerHTML = helpMsg;
+        helpTooltip.setPosition(evt.coordinate);
+        $(helpTooltipElement).removeClass('hidden');
       };
+      
       var info = false;
       // MousePosition Control --> ol.control.MousePosition
       var mousePositionControl = new ol.control.MousePosition({
-      coordinateFormat: ol.coordinate.toStringHDMS,
+        coordinateFormat: ol.coordinate.toStringHDMS,
       });
+      
       // GET FEATURE INFO
       var popup = new ol.Overlay(/** @type {olx.OverlayOptions} */ ({
-      element: document.getElementById('popup'),
-      autoPan: true,
-      autoPanAnimation: {
-      duration: 250
-      }
+        element: document.getElementById('popup'),
+        autoPan: true,
+        autoPanAnimation: {
+          duration: 250
+        }
       }));
+      
       // Mapa --> ol.Map
       var map = new ol.Map({
-      controls: ol.control.defaults({
-      attribution: false // No atribución
-      }).extend([mousePositionControl, // MousePosition
-      new ol.control.FullScreen(), // FullScreen
-      new ol.control.LayerSwitcher({tipLabel: 'Leyenda'}), // LayerSwitcher
-      new ol.control.ScaleLine(), // ScaleLine
-      new ol.control.ZoomSlider() // ZoomSlider
-      ]),
-      target: 'map',
-      overlays : [popup],
-      view: new ol.View({
-      projection: proj,
-      zoom: 3,
-      center: ol.proj.fromLonLat([-0.47343, 39.42811], 'EPSG:4258'),
-      minZoom: 0,
-      maxZoom: 10
-      // Importante poner nuestra proyección, aunque es un parámetro opcional HAY QUE PONERLO!
-      })
+        controls: ol.control.defaults({
+          attribution: false // No atribución
+        }).extend([mousePositionControl, // MousePosition
+          new ol.control.FullScreen(), // FullScreen
+          new ol.control.LayerSwitcher({tipLabel: 'Leyenda'}), // LayerSwitcher
+          new ol.control.ScaleLine(), // ScaleLine
+          new ol.control.ZoomSlider() // ZoomSlider
+        ]),
+        target: 'map',
+        overlays : [popup],
+        view: new ol.View({
+          projection: proj,
+          zoom: 3,
+          center: ol.proj.fromLonLat([-0.47343, 39.42811], 'EPSG:4258'),
+          minZoom: 0,
+          maxZoom: 10
+          // Importante poner nuestra proyección, aunque es un parámetro opcional HAY QUE PONERLO!
+        })
       });
+      
       ortoPNOA.setVisible(true);
       manzanas.setVisible(false);
       caminos.setVisible(false);
       viales.setVisible(false);
       nom_viales.setVisible(false);
+      
       var groupCartoTorrentWMS = new ol.layer.Group({
         title: 'Cartografía de Torrent WMS',
         layers: [municipio, manzanas, viales, caminos, nom_viales, portales]
       });
+      
       map.addLayer(groupCapasBase); // Añadimos grupo de Capas 1
       //map.addLayer(groupCartoTorrentWMST); // Añadimos grupo de Capas 2
       map.addLayer(groupCartoTorrentWMS); // Añadimos grupo de Capas 2
+      
       // Añadimos Control OverviewMap
       map.addControl(new ol.control.OverviewMap({
-      layers: [new ol.layer.Tile(ignBase.getProperties())],
-      view: new ol.View({ // Importante añadir la View con nuestra proyección
-      projection: proj
-      })
+        layers: [new ol.layer.Tile(ignBase.getProperties())],
+        view: new ol.View({ // Importante añadir la View con nuestra proyección
+          projection: proj
+        })
       }));
+      
       ignBase.setVisible(false);
       // GET FEATURE INFO
       var div = $('<div>');
       var hayInfo = false;
       map.on('singleclick', function(evt){
-      if (!info) {$('.ol-popup').addClass('hidden'); return;}
-      $('.ol-popup').removeClass('hidden');
-      $('#popup-content').empty();
-      div = $('<div>');
-      div.css('overflow-x', 'scroll');
-      var coordinate = evt.coordinate;
-      div.append('<p>' + ol.coordinate.toStringHDMS(coordinate) + '</p>');
-      groupCartoTorrentWMS.getLayers().forEach(function(layer){
-      console.log(layer);
-      var url;
-      var append = '';
-      if(layer.getSource() instanceof ol.source.TileWMS && layer.getVisible() == true)
-      {
-      url = layer.getSource().getGetFeatureInfoUrl(coordinate,
-      map.getView().getResolution(),
-      proj, {'INFO_FORMAT': 'text/html'});
-      $.get(url, function(data){
-      hayInfo = true;
-      $(div).append(data);
-      $('table.featureInfo').addClass('table table-responsive auto');
-      $('table.featureInfo tbody tr th').addClass('info auto');
+        if (!info) {$('.ol-popup').addClass('hidden'); return;}
+        $('.ol-popup').removeClass('hidden');
+        $('#popup-content').empty();
+        div = $('<div>');
+        div.css('overflow-x', 'scroll');
+        var coordinate = evt.coordinate;
+        div.append('<p>' + ol.coordinate.toStringHDMS(coordinate) + '</p>');
+        groupCartoTorrentWMS.getLayers().forEach(function(layer){
+          console.log(layer);
+          var url;
+          var append = '';
+          if(layer.getSource() instanceof ol.source.TileWMS && layer.getVisible() == true){
+            url = layer.getSource().getGetFeatureInfoUrl(coordinate,
+            map.getView().getResolution(),
+            proj, {'INFO_FORMAT': 'text/html'});
+            $.get(url, function(data){
+              hayInfo = true;
+              $(div).append(data);
+              $('table.featureInfo').addClass('table table-responsive auto');
+              $('table.featureInfo tbody tr th').addClass('info auto');
+            });
+          }
+        });
+      
+        if (hayInfo){
+          var button_mas_info = document.createElement('button');
+          button_mas_info.className = 'btn btn-default';
+          button_mas_info.innerHTML = 'VER INFORMACIÓN'
+          button_mas_info.addEventListener('click', function(event){
+          BootstrapDialog.show({
+            title: 'Operación GetFeatureInfo',
+            message: $(div),
+            buttons: [{
+              label: 'Cerrar',
+              action: function(dialog){dialog.close();}
+            }]
+          });
+        });
+      
+        $('#popup-content').append(button_mas_info);
+        popup.setPosition(coordinate);
+        hayInfo = false;
+        }
       });
-      }
-      });
-      if (hayInfo){
-      var button_mas_info = document.createElement('button');
-      button_mas_info.className = 'btn btn-default';
-      button_mas_info.innerHTML = 'VER INFORMACIÓN'
-      button_mas_info.addEventListener('click', function(event){
-      BootstrapDialog.show({
-      title: 'Operación GetFeatureInfo',
-      message: $(div),
-      buttons: [{
-      label: 'Cerrar',
-      action: function(dialog){dialog.close();}
-      }]
-      });
-      });
-      $('#popup-content').append(button_mas_info);
-      popup.setPosition(coordinate);
-      hayInfo = false;
-      }
-      });
+      
       $('#popup-closer').click(function() {
-      popup.setPosition(undefined);
-      $(this).blur();
-      return false;
+        popup.setPosition(undefined);
+        $(this).blur();
+        return false;
       });
+      
       map.on('pointermove', pointerMoveHandler);
       createHelpTooltip();
       // FIN MAPA
+      
       $('[data-toggle="tab"]').popover({
-      trigger: 'hover',
-      'placement': 'top'
+        trigger: 'hover',
+        placement: 'top'
       });
+      
       $('#mover').click(function(){
-      $(helpTooltipElement).addClass('hidden');
-      info = false;
+        $(helpTooltipElement).addClass('hidden');
+        info = false;
       });
+      
       $('#info').click(function(){
-      $(helpTooltipElement).removeClass('hidden');
-      info = true;
+        $(helpTooltipElement).removeClass('hidden');
+        info = true;
       });
+      
+      // GEOLOCACLIZACIÓN
+      
+      var geolocation = new ol.Geolocation({
+        projection: map.getView().getProjection()
+      });
+      
+      var accuracyFeature = new ol.Feature();
+      
+      geolocation.on('change:accuracyGeometry', function() {
+        accuracyFeature.setGeometry(geolocation.getAccuracyGeometry());
+      });
+      
+      var positionFeature = new ol.Feature();
+      
+      positionFeature.setStyle(new ol.style.Style({
+        image: new ol.style.Circle({
+          radius: 6,
+          fill: new ol.style.Fill({
+            color: '#3399CC'
+          }),
+          stroke: new ol.style.Stroke({
+            color: '#fff',
+            width: 2
+          })
+        })
+      }));      
+      
+      var panTo = 0;
+      geolocation.on('change:position', function() {
+        var coordinates = geolocation.getPosition();
+        positionFeature.setGeometry(coordinates ? new ol.geom.Point(coordinates) : null);
+        if (panTo == 0){
+          panTo ++;
+          // Pan a mi localización
+          var duration = 2000;
+          var start = +new Date();
+        
+          var pan = ol.animation.pan({
+            duration: duration,
+            source: /** @type {ol.Coordinate} */ (map.getView().getCenter()),
+            start: start
+          });
+        
+          var bounce = ol.animation.bounce({
+            duration: duration,
+            resolution: 4 * map.getView().getResolution(),
+            start: start
+          });
+        
+          map.beforeRender(pan, bounce);
+          map.getView().setCenter(coordinates);
+          
+        }
+      });
+      
+      var featuresOverlay = new ol.layer.Vector({
+        map: map,
+        source: new ol.source.Vector({
+          features: [accuracyFeature, positionFeature]
+        })
+      });
+      
+      var show_position = false;
+      
+      $('#show_position').click(function(){
+        show_position = !show_position;
+        geolocation.setTracking(show_position);
+        featuresOverlay.setVisible(show_position);
+        
+        if(show_position){
+          $(this).empty();
+          $(this).append('<i class="fa fa-eye-slash" >');
+          panTo = 0;
+        }
+        else {
+          $(this).empty();
+          $(this).append('<i class="fa fa-eye" >');        
+        }
+        
+      });
+      // GEOLOCALIZACIÓN FIN
+      
       map.getViewport().addEventListener('mouseout', function(evt){
-      $(helpTooltipElement).addClass('hidden');
+        $(helpTooltipElement).addClass('hidden');
       }, false);
+      
     // Block Script
     block script
